@@ -115,6 +115,7 @@ struct mosq_config {
 	int sub_opts; /* sub */
 	long session_expiry_interval;
 	int random_filter; /* sub */
+	bool watch; /* sub */
 #ifdef WITH_SOCKS
 	char *socks5_host;
 	int socks5_port;
